# cargo-skill

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
.github/workflows/: ci.yml
agents/: reviewer.md  scaffolder.md  worker.md
assets/agents/: rust-architect.md  rust-reviewer.md
assets/python/: layer1.md  layer2.md  layer3.md
assets/rust/: layer1.md  layer2.md  layer3.md
src/: context.rs  deploy.rs  detect.rs  gitignore.rs  lang.rs  lib.rs  main.rs  provenance.rs
src/skill/: layer.rs  mod.rs  prefix.rs
tests/: integration_tests.rs
