[package]
name = "cargo-skill"
version = "0.2.5"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
description = "A Cargo subcommand for deploying and activating layered AI agent skills in Rust projects"
repository = "https://github.com/SHA888/cargo-skill"
keywords = ["cargo", "subcommand", "ai", "agent", "skill"]
categories = ["command-line-utilities", "development-tools"]
authors = ["cargo-skill contributors"]

[[bin]]
name = "cargo-skill"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
anstream = "0.6"

[dev-dependencies]
tempfile = "3"
